# qumas

./: .coveragerc  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  README.md  README.rst  pyproject.toml  req-docs.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  spelling_wordlist.txt
docs/contents/: 10_introduction.rst  20_why_this_package.rst  30_usage.rst  40_modules.rst  modules.rst  quma.LensmodelWrapper.automatic_modeling.rst  quma.LensmodelWrapper.lensmodel.rst  quma.LensmodelWrapper.lensmodel_handler.rst  quma.LensmodelWrapper.lensmodel_reader.rst  quma.LensmodelWrapper.lensmodel_result_handler.rst  quma.LensmodelWrapper.lensmodel_wrapper.rst  quma.LensmodelWrapper.mass_models.rst  quma.LensmodelWrapper.mcmc_lensmodel.rst  quma.LensmodelWrapper.models.rst  quma.LensmodelWrapper.rst  quma.LensmodelWrapper.utils.rst  quma.MicrolensingAnalysis.WindowAnalysis.rst  quma.MicrolensingAnalysis.functions.rst  quma.MicrolensingAnalysis.microlensing_mag_plot.rst  quma.MicrolensingAnalysis.ratio_cont_core.rst  quma.MicrolensingAnalysis.rst  quma.MicrolensingAnalysis.utils.rst  quma.MicrolensingMaps.maps_utils.rst  quma.MicrolensingMaps.micro_maps_func.rst  quma.MicrolensingMaps.plots.rst  quma.MicrolensingMaps.rst  quma.MicrolensingTimescale.Microtimescales.rst  quma.MicrolensingTimescale.rst  quma.MicrolensingTimescale.v_cmb.rst  (+10 more)
examples/: example_1.ipynb  index.rst
quma/: __main__.py  census.py  cli.py
scripts/: clean_rst.py  generate_tables_docs.py
tests/: smoke_test.py  test_cli.py  test_invoking_cli.py
(+95 files in other folders)
